Fix typo in \@fxkeyifundefined documentation.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1648,7 +1648,7 @@
 % \end{macro}
 % \subsubsection{\texttt{xkeyval} related}
 % \begin{macro}{\@fxkeyifundefined}
-%   \marg{families}\marg{keys}\marg{then}\marg{else}
+%   \marg{families}\marg{key}\marg{then}\marg{else}
 %    \begin{macrocode}
 \newcommand\@fxkeyifundefined{\key@ifundefined[fx]}
 %    \end{macrocode}
