Add a missing subsubsection header in the doc.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1913,6 +1913,7 @@
 % \end{macro}
 %
 % \subsection{Annotation layouts}
+% \subsubsection{Layout modes}
 % \begin{option}{multiuser}
 % \begin{option}{singleuser}
 % \begin{option}{mode}
