Improve one section title.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2024,7 +2024,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsubsection{Common textual dispositions}
+% \subsubsection{Standard textual dispositions}
 % \begin{macro}{\@fxtextstd}
 %   \marg{type}\marg{note}\marg{author}\\
 %   The standard text disposition.
