--- a/TODO
+++ b/TODO
@@ -58,3 +58,13 @@ for all of them).
     empty. This would require modifying the contents of this file because
     currently, \contentsline or \fxcontentsline macros are issued for all
     notes.
+
+* The signature layout support is shaky at best. Instead, there should be two
+  standard dispositions: prefix (FiXme Note: ...) and postfix/signature (Note:
+  ... -- FiXme). And one option to select the wanted disposition.
+
+* The multiuser option shouldn't exist. FiXme is the original, single user,
+  and as soon as FXRegisterAuthor is called, we should switch to multiuser.
+
+* Remove every \provide and replace by utilities in main style file. This
+  avoids code duplication.
