Fix one line of code stuck with a file marker.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1582,7 +1582,8 @@
 % \section{Implementation}
 % \subsection{Preamble}
 %    \begin{macrocode}
-%<fixme>\NeedsTeXFormat{LaTeX2e}
+%<fixme>
+\NeedsTeXFormat{LaTeX2e}
 %<*header>
 \ProvidesPackage{fixme}[2017/03/05 v4.3 Collaborative annotations for LaTeX2e]
 
