--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1496,7 +1496,8 @@
 % \item[v4.4] Handle existing yet empty lox file properly, meaning don't
 %   actually typeset an empty list of corrections.\\
 %   Don't update the \texttt{lox} file in final mode, avoiding potential
-%   typesetting artifacts, reported by Lars Madsen.
+%   typesetting artifacts, reported by Lars Madsen.\\
+%   Various internals and documentation improvements.
 % \item[v4.3] Add a paragraph about the duplication of notes in captions, upon
 %   exchange with Kreuvf.\\
 %   Update support for the \komascript classes by using the
