New DoX item for conditionals (\newif's).

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -31,6 +31,7 @@
 \doxitem[idxtype=opt.]{Option}{option}{options}
 \doxitem[idxtype=cnt.]{Counter}{counter}{counters}
 \doxitem[idxtype=lang.]{Lang}{lang}{languages}
+\doxitem[idxtype=cond.]{Cond}{cond}{conditionals}
 \doxitem{Face}{face}{faces}
 \doxitem{Color}{color}{colors}
 \doxitem[idxtype={note lt.}]{Layout}{layout}{note layouts}
