Deactivate checksums for this development version.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -62,7 +62,7 @@
 %
 % \fi
 %
-% \CheckSum{1719}
+% ^^A\CheckSum{1722}
 % \GetFileInfo{fixme.inc}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
