--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1920,29 +1920,27 @@
 % \end{macro}
 %
 % \subsection{Annotation layouts}
-% \subsubsection{Layout modes}
+% \subsubsection{Layout modes (obsolete)}
+% \begin{macro}{\@fxlayoutmodewarning}
 % \begin{option}{multiuser}
 % \begin{option}{singleuser}
 % \begin{option}{mode}
-%   These options specify whether \fx should function in standalone or
-%   collaborative mode, allowing the different layouts to tweak their output.
+%   As of \fx 5, these options do nothing anymore, apart from issuing a
+%   warning.
 %    \begin{macrocode}
-\@fxdefineboolkey[%
-  \ifthenelse{\equal{#1}{true}}{%
-    \fx@mode@singleuserfalse}{%
-    \fx@mode@singleusertrue}]{%
-    mode}{multiuser}
-\@fxdefineboolkey[%
-  \ifthenelse{\equal{#1}{true}}{%
-    \fx@mode@multiuserfalse}{%
-    \fx@mode@multiusertrue}]{%
-    mode}{singleuser}
-\@fxdefinechoicekey{mode}{mode}{multiuser,singleuser}{\@fxsetkeys{mode}{#1}}
+\newcommand*\@fxlayoutmodewarning{%
+  \@fxpkgwarning{The 'multiuser', 'singleuser' and 'mode' options\MessageBreak
+    are obsolete. They remain for backward compatibiity,\MessageBreak
+    but do nothing useful anymore}}
+\@fxdefineboolkey[\@fxlayoutmodewarning]{mode}{multiuser}
+\@fxdefineboolkey[\@fxlayoutmodewarning]{mode}{singleuser}
+\@fxdefinechoicekey{mode}{mode}{multiuser,singleuser}{\@fxlayoutmodewarning}
 
 %    \end{macrocode}
 % \end{option}
 % \end{option}
 % \end{option}
+% \end{macro}
 %
 % \subsubsection{Layout creation}
 % Separating between ``early'' and ``late'' layouts is needed in starred
@@ -2188,7 +2186,7 @@
 %   \marg{type}\marg{note}\marg{author}
 %    \begin{macrocode}
 \newcommand*\FXLayoutIndex[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \index{***@\fixmeindexname:%
       !\@nameuse{@fx#1key}@\fxnotesname{#1}:%
       !\@nameuse{thefx#1count}: #3: #2}%
@@ -2221,7 +2219,7 @@
 %   \marg{type}\marg{note}\marg{author}\\
 %    \begin{macrocode}
 \newcommand*\FXLayoutContentsLine[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \fxaddcontentsline{\@fxtextstd{#1}{#2}{#3}}%
   \else%
     \fxaddcontentsline{\fxnotename{#1}: #2}%
@@ -3011,9 +3009,19 @@
 % \end{macro}
 %
 % \subsection{\fx authors}
+% \begin{cond}{fx@multiuser}
+%   Initialization of this conditional (to false) is done after the original
+%   \fx author is created, later on.
+%    \begin{macrocode}
+\newif\iffx@multiuser
+
+%    \end{macrocode}
+% \end{cond}
 % \begin{macro}{\FXRegisterAuthor}
 %   \marg{cmdprefix}\marg{envprefix}\marg{name}\\
-%   This macro creates the whole user-level interface for a particular author:
+%   This macro creates the whole user-level interface for a particular
+%   author. It also sets \fx in multiuser mode, which is obviously wrong when
+%   the original \fx author is created\ldots
 %    \begin{macrocode}
 \newcommand*\FXRegisterAuthor[3]{%
   \@ifundefined{#1note}{}{%
@@ -3026,6 +3034,7 @@
       You have called \string\FXRegisterAuthor\space with an environment
       prefix already in use.\MessageBreak
       Please choose another one.}}%
+  \fx@multiusertrue% Wrong the first time!
   \@fxnewnotemacro{#1}{note}{#3}%
   \@fxnewnotemacro{#1}{warning}{#3}%
   \@fxnewnotemacro{#1}{error}{#3}%
@@ -3055,9 +3064,12 @@
 % \begin{environment}[noprint]{anfxwarning*}
 % \begin{environment}[noprint]{anfxerror*}
 % \begin{environment}[noprint]{anfxfatal*}
-%   And we use it to create the \fx default user:
+%   We use it to create the original \fx author, and immediately switch back
+%   to single user mode.
 %    \begin{macrocode}
 \FXRegisterAuthor{fx}{anfx}{fixme}
+\fx@multiuserfalse
+
 %    \end{macrocode}
 % \end{environment}
 % \end{environment}
@@ -4210,7 +4222,7 @@
     \raggedright\@fxuseface{margin}\fxnotename{#1}!\@fxsignature{#3}}}
 \renewcommand*\FXLayoutInline[3]{{ \@fxuseface{inline}\@fxsigstd{#1}{#2}{#3}}}
 \renewcommand*\FXLayoutIndex[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \index{***@\fixmeindexname:%
       !\@nameuse{@fx#1key}@\fxnotesname{#1}:%
       !\@nameuse{thefx#1count}: #2\@fxsignature{#3}}%
@@ -4223,7 +4235,7 @@
       !\@nameuse{thefx#1count}: #2}%
   \fi}
 \renewcommand*\FXLayoutContentsLine[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \fxaddcontentsline{\@fxsigstd{#1}{#2}{#3}}%
   \else%
     \fxaddcontentsline{\fxnotename{#1}: #2}%
@@ -4262,7 +4274,7 @@
   \@fxdocolon{#3}%
   { \textcolor{fx#1}{\@fxuseface{inline}\ignorespaces#3\@fxcolon#2}}}
 \renewcommand*\FXLayoutIndex[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \index{***@\fixmeindexname:%
       !\@nameuse{@fx#1key}@\fxnotesname{#1}:%
       !{\color{fx#1}\@nameuse{thefx#1count}: #3: #2}}%
@@ -4277,7 +4289,7 @@
 
 \renewcommand*\FXLayoutContentsLine[3]{%
   \@fxdocolon{#3}%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \fxaddcontentsline{\color{fx#1}\ignorespaces#3\@fxcolon#2}%
   \else%
     \fxaddcontentsline{\color{fx#1}#2}%
@@ -4310,7 +4322,7 @@
 \renewcommand*\FXLayoutInline[3]{%
   { \textcolor{fx#1}{\@fxuseface{inline}#2\@fxsignature{#3}}}}
 \renewcommand*\FXLayoutIndex[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \index{***@\fixmeindexname:%
       !\@nameuse{@fx#1key}@\fxnotesname{#1}:%
       !{\color{fx#1}\@nameuse{thefx#1count}: #2\@fxsignature{#3}}}%
@@ -4323,7 +4335,7 @@
       !{\color{fx#1}\@nameuse{thefx#1count}: #2}}%
   \fi}
 \renewcommand*\FXLayoutContentsLine[3]{%
-  \iffx@mode@multiuser%
+  \iffx@multiuser%
     \fxaddcontentsline{\color{fx#1}#2\@fxsignature{#3}}%
   \else%
     \fxaddcontentsline{\color{fx#1}#2}%
