Advertise autodetection of multiuser mode.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1494,6 +1494,8 @@
 %
 % \section{History\label{sec:manual:history}}
 % \begin{itemize}
+% \item[v5.0] Automatic detection of multiuser mode. The \texttt{mode},
+%   \texttt{singleuser} and \texttt{multiuser} options are now obsolete.
 % \item[v4.4] Handle existing yet empty lox file properly, meaning don't
 %   actually typeset an empty list of corrections.\\
 %   Don't update the \texttt{lox} file in final mode, avoiding potential
