--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,10 @@ distributions of LaTeX version 2005/12/01 or later.
 FiXme consists of the files listed in the file `README.md'.
 
 
+* Version 5.0
+** Automatic detection of multiuser mode.
+The mode, singleuser and multiuser options are now obsolete.
+
 * Version 4.4
 ** Handle existing yet empty lox files properly
 meaning, don't actually typeset an empty list of corrections.
