--- a/fixme.dtx
+++ b/fixme.dtx
@@ -454,7 +454,6 @@
 % consume \TeX{} resources if not used. As a consequence, selecting an
 % external layout might involve loading the relevant file first.
 %
-% \noindent\DescribeMacro{\fxloadlayouts}\marg{name,\ldots}\\
 % For technical reasons, it is not possible to do such a thing outside the
 % preamble, neither in the middle of processing \cs{usepackage} options. As a
 % result, layout options are restricted and you have three possibilities for
@@ -466,7 +465,11 @@
 % \item Use the \cs{fxuselayouts} command in the preamble like this:\\
 %   |\fxuselayouts{|\meta{name}|}|. This is strictly equivalent to the
 %   previous solution.
-% \item If on the other hand you want to load one or several external layouts
+% \end{enumerate}
+% \DescribeMacro{\fxloadlayouts}\marg{name,\ldots}
+% \begin{enumerate}
+% \item[3]
+%   If on the other hand you want to load one or several external layouts
 %   \emph{without} using them immediately (perhaps in order to use them
 %   locally in some specific annotation), use the \cs{fxloadlayouts} command
 %   in the preamble like this: |\fxloadlayouts{|\meta{name}|,...}|. After
