Fix wrong macro name in the documentation.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1402,11 +1402,15 @@
 % files as described before, in order to make them more generally available.
 %
 % \noindent
-% \DescribeMacro{\FXRequireLayout}
+% \DescribeMacro{\FXRequireLayouts}\marg{layout names}\\
+% In order to use external layouts in a theme, use the command
+% \cs{FXRequireLayouts}, passing it a list of \meta{layout names} as
+% argument.\\
 % \DescribeMacro{\FXRequireEnvLayout}
 % \DescribeMacro{\FXRequireTargetLayout}\marg{name}\\
-% In order to use an external layout in a theme, use the commands
-% \cs{FXRequire*Layout} and give them the layout's name as argument.
+% In order to use and external environment or target layout in a theme, use
+% the commands \cs{FXRequire*Layout} and give them the layout's name as
+% argument.
 %
 % \noindent
 % \DescribeMacro{\FXProvidesTheme}\marg{name}\oarg{release information}\\
