Add 'theme' to doxitems.

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4347,7 +4347,7 @@
 % \Finale
 %
 % ^^A Local variables:
-% ^^A eval : (add-hook 'TeX-update-style-hook (lambda () (doxitems "option" "counter" "lang" "face" "color")) nil t)
+% ^^A eval : (add-hook 'TeX-update-style-hook (lambda () (doxitems "option" "counter" "lang" "cond" "face" "color" "theme")) nil t)
 % ^^A eval: (add-hook 'TeX-update-style-hook (lambda () (doxitem "\\(env\\|target\\)?layout")) nil t)
 % ^^A End:
 % ^^A fixme.dtx ends here.
